@@ -204,6 +204,7 @@ Version 1.5
  - Add Dome Mouser (Nechry)
  - Add Steinel IS140 from Karhujarvi (Nechry)
  - Add Fibaro FGT-001 - The Heat Controller Radiator Thermostat (Nechry)
+ - Issue #1407 - add TKB TZ79 Power meter Relay Switch from PhP71 (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
